MOG v1.7.1